// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Deve fazer um pedido com 3 itens (com descrição, preço e quantidade)  1`] = `
Object {
  "ordered": true,
  "priceTotal": 3000,
  "products": Array [
    Object {
      "description": "Shot Azul",
      "price": 1000,
      "quantity": 1,
    },
    Object {
      "description": "Shot Azul",
      "price": 1000,
      "quantity": 1,
    },
    Object {
      "description": "Shot Azul",
      "price": 1000,
      "quantity": 1,
    },
  ],
}
`;

exports[`Order Deve fazer um pedido com cpf válido 1`] = `
Object {
  "ordered": true,
  "priceTotal": 1000,
  "products": Array [
    Object {
      "description": "Shot Azul",
      "price": 1000,
      "quantity": 1,
    },
  ],
}
`;
